# CustomControlZ

./: .gitignore  CMakeLists.txt  CustomControlZ.slnx  CustomControlz.slnx  EldenRingSprint.slnx  MANUAL.md  README.md  build.bat  package_mac.sh  rc Resource.rc
.claude/: settings.local.json
.github/workflows/: build-release.yml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE-MacBook Pro.md  STATE.md  config.json
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/phases/01-behavior-engine/: .continue-here.md  01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-03-PLAN.md  01-03-SUMMARY.md  01-RESEARCH.md  01-VALIDATION.md  01-VERIFICATION.md
.planning/phases/02-profile-persistence/: 02-01-PLAN.md  02-02-PLAN.md  02-03-PLAN.md  02-RESEARCH.md  02-VALIDATION.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
CustomControlZ/: BehaviorEngine.h  CustomControlZ.cpp  CustomControlZ.vcxproj.filters  GameProfiles.h  Resource.rc  app.manifest
CustomControlZ/games/: EldenRing.h  ToxicCommando.h
CustomControlZ/x64/Debug/: CustomControlZ.exe.recipe  CustomControlZ.ilk  Resource.res  vc143.idb
CustomControlZ/x64/Debug/CustomControlZ.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomControlZ.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog  rc.command.1.tlog  rc.read.1.tlog  rc.write.1.tlog
CustomControlz/: CustomControlz.cpp  CustomControlz.vcxproj  CustomControlz.vcxproj.filters  Resource.rc  app.manifest
CustomControlz/games/: EldenRing.h  ToxicCommando.h
EldenRingSprint/: EldenRingSprint.cpp  EldenRingSprint.vcxproj  EldenRingSprint.vcxproj.filters
build-mac/: CMakeCache.txt  Makefile  cmake_install.cmake
build-mac/.qt/: QtDeploySupport.cmake  QtDeployTargets.cmake
build-mac/CustomControlZ.app/Contents/: Info.plist
build-mac/CustomControlZ.app/Contents/Frameworks/: QtDBus.framework.pkgf  QtNetwork.framework.pkgf  QtOpenGL.framework.pkgf  QtQmlMeta.framework.pkgf  QtQmlModels.framework.pkgf  QtQmlWorkerScript.framework.pkgf
build-mac/CustomControlZ.app/Contents/Frameworks/QtSvg.framework/Versions/A/: QtSvg
build-mac/CustomControlZ.app/Contents/Frameworks/QtSvg.framework/Versions/A/Resources/: Info.plist
build-mac/CustomControlZ.app/Contents/Frameworks/QtSvg.framework/Versions/A/_CodeSignature/: CodeResources
build-mac/CustomControlZ.app/Contents/Frameworks/QtVirtualKeyboard.framework/Versions/A/: QtVirtualKeyboard
build-mac/CustomControlZ.app/Contents/Frameworks/QtVirtualKeyboard.framework/Versions/A/Resources/: Info.plist
build-mac/CustomControlZ.app/Contents/Frameworks/QtVirtualKeyboard.framework/Versions/A/_CodeSignature/: CodeResources
build-mac/CustomControlZ.app/Contents/Frameworks/QtVirtualKeyboardQml.framework/Versions/A/: QtVirtualKeyboardQml
build-mac/CustomControlZ.app/Contents/Frameworks/QtVirtualKeyboardQml.framework/Versions/A/Resources/: Info.plist
build-mac/CustomControlZ.app/Contents/Frameworks/QtVirtualKeyboardQml.framework/Versions/A/_CodeSignature/: CodeResources
build-mac/CustomControlZ.app/Contents/MacOS/: CustomControlZ
build-mac/CustomControlZ.app/Contents/PlugIns/iconengines/: libqsvgicon.dylib
build-mac/CustomControlZ.app/Contents/PlugIns/imageformats/: libqpdf.dylib  libqsvg.dylib
build-mac/CustomControlZ.app/Contents/PlugIns/platforminputcontexts/: libqtvirtualkeyboardplugin.dylib
build-mac/CustomControlZ.app/Contents/_CodeSignature/: CodeResources
build-mac/CustomControlZ_autogen/: deps  moc_predefs.h  mocs_compilation.cpp
build-mac/CustomControlZ_autogen/S2RWXIVC6I/: moc_SettingsWindow.cpp  moc_SettingsWindow.cpp.d  moc_TrayIcon.cpp  moc_TrayIcon.cpp.d
build-mac/CustomControlZ_autogen/include/: SettingsWindow.moc  SettingsWindow.moc.d
src/: BehaviorEngine.h  CustomControlZ.cpp  CustomControlZ.vcxproj  CustomControlZ.vcxproj.filters  GameProfiles.h  Resource.rc  resource.h
src/games/: DarkSoulsIII.h  Darktide.h  EldenRing.h  ToxicCommando.h  Valheim.h
src/mac/: GameEngine.cpp  GameEngine.h  IniConfig.h  SettingsWindow.cpp  SettingsWindow.h  TrayIcon.cpp  TrayIcon.h  main_mac.cpp
src/platform/: mac_key_helpers.h  platform.h  platform_macos.mm  win_types_compat.h  windows.h
x64/Debug/: settings.ini
